Bug 1708303 - Fix scroll-margin implementation. r=hiro

So that margin is not included in the rect for visibility calculations,
and padding and margin are accounted properly on them.

Differential Revision: https://phabricator.services.mozilla.com/D113853