layout/base/PresShell.h
@@ -575,7 +575,8 @@ class PresShell final : public nsStubDocumentObserver,
    */
   MOZ_CAN_RUN_SCRIPT
   bool ScrollFrameRectIntoView(nsIFrame* aFrame, const nsRect& aRect,
-                               ScrollAxis aVertical, ScrollAxis aHorizontal,
+                               const nsMargin& aMargin, ScrollAxis aVertical,
+                               ScrollAxis aHorizontal,
                                ScrollFlags aScrollFlags);
 
   /**
