layout/forms/nsListControlFrame.cpp
@@ -1803,8 +1803,8 @@ void nsListControlFrame::ScrollToFrame(dom::HTMLOptionElement& aOptElement) {
   if (nsIFrame* childFrame = aOptElement.GetPrimaryFrame()) {
     RefPtr<mozilla::PresShell> presShell = PresShell();
     presShell->ScrollFrameRectIntoView(
-        childFrame, nsRect(nsPoint(0, 0), childFrame->GetSize()), ScrollAxis(),
-        ScrollAxis(),
+        childFrame, nsRect(nsPoint(0, 0), childFrame->GetSize()), nsMargin(),
+        ScrollAxis(), ScrollAxis(),
         ScrollFlags::ScrollOverflowHidden |
             ScrollFlags::ScrollFirstAncestorOnly);
   }
